Style container to hold grid layout Style .container as a Flexbox container with wrapping. Set a fixed width and height to define a consistent 16*16 grid area with a border.

--- a/style.css
+++ b/style.css
@@ -13,3 +13,12 @@ body {
     padding: 50px;
     margin: 10px;
   }
+
+  .container{
+    display: flex;
+    flex-wrap: wrap; /* Allows items to wrap to the next line */
+    width: 800px;
+    height: 800px;
+    border: 1px solid rgb(187, 184, 184);
+  
+}
